[project]
name = "leetcode"
version = "0.1.0"
description = "Just trying some stuff out"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "ruff>=0.6.3",
]

[project.scripts]
leetcode = "leetcode:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leetcode"]

[tool.ruff]
include = ["src/**/*.py"]